# Q4_Goal

./: .env.example  .gitignore  README.md  agent.py  bot.py  chain.py  check.py  config.py  main.py  memory.py  pyproject.toml  storage.py  user_manager.py
agents/: base_agent.py  langmem_agent.py
bot/: handlers.py  telegram_bot.py
config/: langfuse_client.py  settings.py
llm/: openai_client.py
memory/: chat_history.py  user_manager.py
prompts/: langmem_prompt.py
storage/: checkpointer.py  mongodb_client.py  stores.py
utils/: logger.py
